# alpha-pilot-team-deadlock

./: .gitignore  .gitmodules  PAPERS.md  README.md
GateSim/: README.md
control/quad_sim/: README.md  config.py  controller.py  env_renderer.py  quad_config.py  quad_env.py
deprecated/: CMakeLists.txt  run_state_machine_vins_mono_gt.py
deprecated/depth_estimation/: pgm_util.py
deprecated/depth_estimation/sample_data/: imgleft000000009.pgm  right.pgm
deprecated/depth_estimation/semi_global_matching/: CMakeLists.txt  README.md
deprecated/depth_estimation/semi_global_matching/sample/image/: CMakeLists.txt
deprecated/depth_estimation/semi_global_matching/sample/image_cv_gpumat/: imgright000000009.pgm
deprecated/depth_estimation/semi_global_matching/src/: CMakeLists.txt
deprecated/env_interface/: fg_vins_env.py
deprecated/experimental/: debug_abstract_env.py  ros_topic_subscriber.py
deprecated/gate_locations/: gate_locations_13.yaml  gate_locations_18.yaml  gate_locations_24.yaml
deprecated/include/: controller.h  state_machine.h
deprecated/official_doc/Challenge_Leaderboardtest/config/challenges/: gate_locations_22.yaml  gate_locations_5.yaml
deprecated/official_doc/Challenge_Leaderboardtest/config/perturbations/: perturbed_gates_10.yaml  perturbed_gates_12.yaml
deprecated/official_doc/Challenge_Leaderboardtest/launch/: scorer.py
deprecated/planner/: heuristic_planner.py
deprecated/src/: controller.cc
deprecated/test3_submission/challenges/: gate_locations_7.yaml
deprecated/test3_submission/perturbations/: perturbed_gates_0.yaml  perturbed_gates_11.yaml  perturbed_gates_21.yaml  perturbed_gates_22.yaml
deprecated/utils/: util_vision.py
e2e_system/depth_estimation/: README.md
e2e_system/depth_estimation/semi_global_matching/sample/image_cv_gpumat/: CMakeLists.txt
e2e_system/env_interface/: abstract_env.py  ground_truth_env.py
e2e_system/experimental/: debug_fg_vins_env.py
e2e_system/gate_locations/: gate_locations_0.yaml  (+2 more)
fg_config/: README.md  test.launch
flight_goggle_config/: README.md  test_drone.yaml
integration/: CMakeLists.txt  README.md  controller_node.py  fg_env.py  ground_truth_env.py  run_state_machine_final.py  run_state_machine_gt.py  run_state_machine_vins_mono.py  run_state_machine_vins_mono_gt.py  set_up_env.sh  transmitter_node.py  utils.py
integration/controller/: basic_controller.py
integration/depth_estimation/: test_sgm.py
integration/depth_estimation/sample_data/: left.pgm
integration/depth_estimation/semi_global_matching/include/: libsgm_config.h
integration/depth_estimation/semi_global_matching/sample/image/: stereosgm_image.cpp
integration/depth_estimation/semi_global_matching/src/: census_transform.hpp
integration/depth_estimation/sgm_ext/: CMakeLists.txt
integration/depth_estimation/sgm_ext/cmake/: DetectPython.cmake  FindLibSGM.cmake
integration/design/: draw_state_machine.py
integration/env_interface/: abstract_env.py  fg_vins_env.py  ground_truth_env.py
integration/experimental/: ibvs_controller.py  ros_get_param.py  ros_topic_publisher.py
integration/gate_estimator/: bayesian_estimator.py  pnp_estimator.py  simple_estimator.py
integration/gate_locations/: gate_locations_12.yaml  gate_locations_2.yaml
integration/include/: controller.h  simulator_client.h  state_machine.h
integration/localizer/: altitude_kalman.py  complimentary_filter.py
integration/official_doc/Challenge_Leaderboardtest/config/challenges/: challenge_final.yaml  gate_locations_14.yaml  gate_locations_16.yaml  gate_locations_2.yaml
integration/official_doc/Challenge_Leaderboardtest/config/perturbations/: perturbed_gates_15.yaml  perturbed_gates_16.yaml  perturbed_gates_17.yaml  perturbed_gates_2.yaml
integration/official_doc/Challenge_Leaderboardtest/launch/: scorer.launch
integration/planner/: fast_trajectory_planner.py  heuristic_planner.py  missile_planner.py  normal_interface.cpp
integration/planner/trajectory_lib/: quadrocoptertrajectory.py
integration/ref/Challenge_Leaderboardtest/config/challenges/: gate_locations_10.yaml  gate_locations_20.yaml  gate_locations_7.yaml  gate_locations_9.yaml
integration/ref/Challenge_Leaderboardtest/config/perturbations/: perturbed_gates_22.yaml
integration/src/: main.cc  simulator_client.cc  state_machine.cc
integration/test3_submission/: README.md  reporter.py  scorer.launch  scorer.sh
integration/test3_submission/challenges/: gate_locations_1.yaml  gate_locations_11.yaml  gate_locations_12.yaml  gate_locations_13.yaml  gate_locations_14.yaml  gate_locations_15.yaml  gate_locations_17.yaml  gate_locations_18.yaml  gate_locations_19.yaml  gate_locations_20.yaml  gate_locations_21.yaml  gate_locations_22.yaml  gate_locations_23.yaml  gate_locations_24.yaml  gate_locations_3.yaml  gate_locations_4.yaml  gate_locations_6.yaml  gate_locations_8.yaml  gate_locations_9.yaml
integration/test3_submission/perturbations/: perturbed_gates_0.yaml  perturbed_gates_1.yaml  perturbed_gates_10.yaml  perturbed_gates_11.yaml  perturbed_gates_12.yaml  perturbed_gates_14.yaml  perturbed_gates_15.yaml  perturbed_gates_16.yaml  perturbed_gates_17.yaml  perturbed_gates_18.yaml  perturbed_gates_19.yaml  perturbed_gates_2.yaml  perturbed_gates_20.yaml  perturbed_gates_23.yaml  perturbed_gates_24.yaml  perturbed_gates_3.yaml  perturbed_gates_4.yaml  perturbed_gates_5.yaml  perturbed_gates_6.yaml  perturbed_gates_7.yaml  perturbed_gates_8.yaml
integration/test3_submission/state_machine/: README.md  package.xml  setup.py
integration/tests/: state_machine_test.cc
integration_fg_ros/: config.py  controller_node.py  fg_env.py  ground_truth_env.py  ros_topic_publisher.py
reading_material/: README.md
simulation/: README.md  test_ros_publisher.py
vision/depth_estimation/semi_global_matching/: CMakeLists.txt  README.md
vision/depth_estimation/semi_global_matching/include/: conversion.h  libsgm.h
vision/depth_estimation/semi_global_matching/src/: CMakeLists.txt  conversion.cpp  python_bindings.cpp
vision/depth_estimation/sgm_ext/: CMakeLists.txt
(+180 files in other folders)
